# wordgen

./: .gitignore  pyproject.toml  readme.md
src/wordgen/: __init__.py
src/wordgen/data/: LICENSE  __init__.py
src/wordgen/markov_singlechar/: extract.py  main.py  predict.py
src/wordgen/sort/: extract_markov.py  extract_syllables.py  generate_markov.py  generate_syllables.py
