[project]
name = "wordgen"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "diskcache>=5.6.3",
    "numpy>=2.2.2",
    "pyphen>=0.17.2",
    "tqdm>=4.67.1",
]
[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "mypy>=1.14.1",
    "ruff>=0.9.4",
    "types-tqdm>=4.67.0.20241221",
    "ipython>=8.32.0",
    "viztracer>=1.0.1",
    "yappi>=1.6.10",
]

[tool.mypy]
ignore_missing_imports = true
